feat: Add Focus Timer plugin with timer functionality and average response time calculation
- Updated package.json to include repository information.
- Modified manifest.json to reflect new plugin details including author, name, and description.
- Implemented useTimer hook for managing timer state and functionality.
- Created cardUtils for calculating average response time based on card repetition history.
- Added logger utility for consistent logging throughout the plugin.
- Developed FocusTimerWidget to display and control the timer within the RemNote interface.
- Registered Focus Timer settings and widget in the plugin activation process.
- Removed sample widget as it was no longer needed.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,17 +1,16 @@
 {
+  "author": "oxdev03",
+  "name": "Focus Timer",
+  "description": "Stay focused and in flow during your study sessions. The plugin adds a countdown based on your last answer time, helping you to improve recall performance and reduce distraction.",
+  "enableOnMobile": true,
+  "repoUrl": "https://github.com/oxdev03/remnote-focus-timer.git",
+  "id": "oxdev03-focus-timer",
   "manifestVersion": 1,
-  "id": "plugin_template",
-  "name": "Plugin Template",
-  "author": "remnote",
-  "repoUrl": "",
   "version": {
     "major": 0,
-    "minor": 0,
-    "patch": 1
+    "minor": 1,
+    "patch": 0
   },
-  "theme": [],
-  "enableOnMobile": false,
-  "description": "",
   "requestNative": false,
   "requiredScopes": [
     {
