--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "name": "remnote-plugin-template-react",
   "version": "0.0.1",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/oxdev03/remnote-focus-timer.git"
+  },
   "scripts": {
     "check-types": "tsc",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --color --progress --no-open",
