--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "author": "oxdev03",
   "name": "Focus Timer",
-  "description": "Stay focused and in flow during your study sessions. The plugin adds a countdown based on your last answer time, helping you to improve recall performance and reduce distraction.",
+  "description": "A simple countdown timer for RemNote flashcards that helps you stay focused during review sessions and stop procrastinating by gamifying faster recalls.",
   "enableOnMobile": true,
   "repoUrl": "https://github.com/oxdev03/remnote-focus-timer.git",
   "id": "oxdev03-focus-timer",
